fix: bugs with horizontal scroll

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -118,6 +118,7 @@ article {
     height: 100vh;
     width: 100%;
     scroll-snap-align: center;
+    overflow: hidden;
 }
 section {
     height: 100dvh;
